# tb-starter

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
multi/: CMakeLists.txt
multi/KLineDs/: Data.h  KLineDS.cpp  KLineDS.h  main.cpp
multi/gemm/: CMakeLists.txt  gemm.cu  gemm.h  gemm0.h  gemm1.h  gemm2.h  gemm3.h  gemm4.h  gemm5.h  gemm5_1.h  gemm6.h  gemm_eigen.cpp  gemm_numpy.py  gemm_openblas.cpp  gemm_torch.py  gemm_utils.h  main.cpp
single/: CMakeLists.txt  branchless-case.cpp  branchless-in-range.cpp  coro_test.cpp  ebo.cpp  generator.cpp  malloc-bench.cpp  packed.cpp  parallel_mp.cpp  parallel_mp_benchmarks.cpp  pmr-test.cpp  pointers-benchmarks.cpp  proxy-test.cpp  read_csv.cpp  simd.cpp  sleepfor5ms.cpp  spinlock-bench.cpp  stacktrace_exception.cpp  test.cpp  thread_safe_queue.cpp  tmp.cpp  variant.cpp  virtual-vs-crtp.cpp
single/design-pattern/: builder.cpp  singleton.cpp  visitor.cpp
tbs/include/: lockfree_queue.hpp  lockfree_ring_buffer.hpp  mp.hpp  omega_exception.hpp  pmr_unique_ptr.hpp  proxy.h  random.hpp  spinlock.hpp  spsc.hpp  tbs.hpp  thread_safe_queue.hpp  timer.hpp  trio.hpp  utils.hpp
test/: CMakeLists.txt  test.cpp
utils/include/: random.hpp  timer.hpp  utils.hpp
